test/tests/compiler/1_int_constants/invalid_parse/space_in_keyword.plx
pub main(none) i32 {
    retur n 0
}
